<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/third"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tvCongrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_Congratulations"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvResultScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_ResultScore"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRestartGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:backgroundTint="@null"
            android:text="@string/btn_RestartGame"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnExitGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:backgroundTint="@null"
            android:text="@string/btn_ExitGame"
            android:textColor="@color/blue"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>